--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
-  "author": "Gajraj Singh",
+  "author": "Ankit Singh",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
